[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grandstream-home-api"
version = "0.1.3"
description = "Python API library for Grandstream GDS/GSC and GNS devices"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Grandstream Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cryptography>=42.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/GrandstreamEngineering/grandstream_home_api"
Documentation = "https://github.com/GrandstreamEngineering/grandstream_home_api/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/grandstream_home_api"]

[tool.hatch.build.targets.sdist]
include = ["src/grandstream_home_api"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["urllib3.*"]
ignore_missing_imports = true
