[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grandstream-home-api"
version = "0.1.1"
description = "Python API library for Grandstream GDS/GSC and GNS devices"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Grandstream Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cryptography>=42.0.0",
    "requests>=2.31.0",
    "urllib3>=1.26.5,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/home-assistant/core"
Documentation = "https://www.home-assistant.io/integrations/grandstream_home"

[tool.hatch.build.targets.wheel]
packages = ["src/grandstream_home_api"]

[tool.hatch.build.targets.sdist]
include = ["src/grandstream_home_api"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any)
    "COM812",  # Trailing comma missing
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "EM101",   # Exception must not use a string literal
    "EM102",   # Exception must not use an f-string literal
    "FBT001",  # Boolean positional arg in function definition
    "FBT002",  # Boolean default positional argument in function
    "FIX002",  # Line contains TODO
    "PLR2004", # Magic value used in comparison
    "PTH",     # Use pathlib
    "S105",    # Possible hardcoded password
    "S106",    # Possible hardcoded password
    "S324",    # Probable use of insecure hash function
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["urllib3.*"]
ignore_missing_imports = true
